--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Strata by HTML5 UP</title>
+		<title></title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -15,11 +15,19 @@
 
 		<!-- Header -->
 			<header id="header">
-				<div class="inner">
+				<div class="inner" align="center">
 					<a href="#" class="image avatar"><img src="images/avatar.jpg" alt="" /></a>
-					<h1><strong>Thanh Tam Do</strong><br />
-						Computer Science student at Houston Community College <br />
-					crafted by <a href="http://html5up.net">HTML5 UP</a>.</h1>
+					<h1 align="center"><strong>Thanh Tam Do</strong>
+						<br />
+							Computer Science student at
+						<br />
+						<div spacing="200px" class="css-n4rfvs" size="small"> 
+							<a href="https://www.hccs.edu/" target="blank"> 
+								<button type="button" class="chakra-button css-1ipe07d">Houston Community College</button>
+							</a>
+						</div>
+						
+					</h1>
 				</div>
 			</header>
 
@@ -29,48 +37,36 @@
 				<!-- One -->
 					<section id="one">
 						<header class="major">
-							<h2>Ipsum lorem dolor aliquam ante commodo<br />
-							magna sed accumsan arcu neque.</h2>
+							<h2> About </h2>
 						</header>
-						<p></p>
+						<p><strong> Hello! I am Tam Do, a dedicated Computer Science student at Houston Community College with a profound interest in the transformative powers of technology, particularly in artificial intelligence, computer vision, and autonomous systems. Currently, I am enhancing my skills as a Software Engineering Fellow at Headstarter AI, focusing on innovative AI solutions.</strong></p>
+
+						<p><strong>In addition to my role at Headstarter AI, I contribute as a Mathematics Tutor at HCC, where I mentor peers and cultivate a deeper understanding of the theoretical foundations of computing and automation. My ambition is to drive advancements in autonomous driving technologies, leveraging AI to enhance safety and efficiency in transportation.</strong></p>
+							
+						<p><strong>I am always looking to connect with like-minded professionals and explore opportunities in AI, robotics, and autonomous driving. Feel free to reach out to me here on LinkedIn to exchange ideas or discuss potential collaborations.</strong></p>
 						<ul class="actions">
-							<li><a href="#" class="button">Learn More</a></li>
+							<li><a href="images/resume.pdf" class="button">Resume</a></li>
 						</ul>
 					</section>
 
 				<!-- Two -->
 					<section id="two">
-						<h2>Recent Work</h2>
+						<h2>Experience</h2>
 						<div class="row">
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/fulls/01.jpg" class="image fit thumb"><img src="images/thumbs/01.jpg" alt="" /></a>
-								<h3>Magna sed consequat tempus</h3>
-								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
+								<h3>Participant</h3>
+								<p>Jul 2024 - Present</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/fulls/02.jpg" class="image fit thumb"><img src="images/thumbs/02.jpg" alt="" /></a>
-								<h3>Ultricies lacinia interdum</h3>
-								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
+								<h3>Software Engineer Fellow</h3>
+								<p>Jul 2024 - Present</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/fulls/03.jpg" class="image fit thumb"><img src="images/thumbs/03.jpg" alt="" /></a>
-								<h3>Tortor metus commodo</h3>
-								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
-							</article>
-							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/04.jpg" class="image fit thumb"><img src="images/thumbs/04.jpg" alt="" /></a>
-								<h3>Quam neque phasellus</h3>
-								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
-							</article>
-							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/05.jpg" class="image fit thumb"><img src="images/thumbs/05.jpg" alt="" /></a>
-								<h3>Nunc enim commodo aliquet</h3>
-								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
-							</article>
-							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/06.jpg" class="image fit thumb"><img src="images/thumbs/06.jpg" alt="" /></a>
-								<h3>Risus ornare lacinia</h3>
-								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
+								<h3>Mathematics Tutor I</h3>
+								<p>March 2024 - Present</p>
 							</article>
 						</div>
 						<ul class="actions">
@@ -80,8 +76,8 @@
 
 				<!-- Three -->
 					<section id="three">
-						<h2>Get In Touch</h2>
-						<p>Accumsan pellentesque commodo blandit enim arcu non at amet id arcu magna. Accumsan orci faucibus id eu lorem semper nunc nisi lorem vulputate lorem neque lorem ipsum dolor.</p>
+						<h2>Contact</h2>
+						<p>Fill up the form below to get in touch </p>
 						<div class="row">
 							<div class="col-8 col-12-small">
 								<form method="post" action="#">
@@ -98,18 +94,16 @@
 							<div class="col-4 col-12-small">
 								<ul class="labeled-icons">
 									<li>
-										<h3 class="icon solid fa-home"><span class="label">Address</span></h3>
-										1234 Somewhere Rd.<br />
-										Nashville, TN 00000<br />
-										United States
+										<h3 class="icon solid fa-home"><span class="label"></span></h3>
+										Houston, TX
 									</li>
 									<li>
 										<h3 class="icon solid fa-mobile-alt"><span class="label">Phone</span></h3>
-										000-000-0000
+										(+1) 713-545-9666
 									</li>
 									<li>
 										<h3 class="icon solid fa-envelope"><span class="label">Email</span></h3>
-										<a href="#">hello@untitled.tld</a>
+										<a href="#">thanhtamdo912005@gmail.com</a>
 									</li>
 								</ul>
 							</div>
@@ -438,15 +432,13 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 
 		<!-- Footer -->
 			<footer id="footer">
-				<div class="inner">
+				<div class="inner" align="center">
 					<ul class="icons">
-						<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-						<li><a href="#" class="icon brands fa-github"><span class="label">Github</span></a></li>
-						<li><a href="#" class="icon brands fa-dribbble"><span class="label">Dribbble</span></a></li>
-						<li><a href="#" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
+						<li><a href="" class="icon brands fa-twitter" ><span class="label">Twitter</span></a></li>
+						<li><a href="https://github.com/dothanhtam91" class="icon brands fa-github" ><span class="label">Github</span></a></li>
+						<li><a href="https://www.linkedin.com/in/tam-do-a85800248/" class="icon brands fa-linkedin"><span class="label">Dribbble</span></a></li>
 					</ul>
 					<ul class="copyright">
-						<li>&copy; Untitled</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 					</ul>
 				</div>
 			</footer>
