--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 						<br />
 							Computer Science student at
 						<br />
-						<div spacing="200px" class="css-n4rfvs" size="small"> 
+						<div spacing="200px" class="css-n4rfvs"> 
 							<a href="https://www.hccs.edu/" target="blank"> 
 								<button type="button" class="chakra-button css-1ipe07d">Houston Community College</button>
 							</a>
