--- a/index.html
+++ b/index.html
@@ -435,9 +435,8 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 				<div class="inner" align="center">
 					<ul class="icons">
 						<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-						<li><a href="#" class="icon brands fa-github"><span class="label">Github</span></a></li>
-						<li><a href="#" class="icon brands fa-dribbble"><span class="label">Dribbble</span></a></li>
-						<li><a href="#" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
+						<li><a href="https://github.com/dothanhtam91" class="icon brands fa-github"><span class="label">Github</span></a></li>
+						<li><a href="https://www.linkedin.com/in/tam-do-a85800248/" class="icon brands fa-linkedin"><span class="label">Dribbble</span></a></li>
 					</ul>
 					<ul class="copyright">
 					</ul>
